--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ dotenvy = "^0.15.7"
 reqwest = { version = "^0.12.25", features = ["blocking", "json"] }
 serde = { version = "^1.0.217", features = ["derive"] }
 thiserror = "^2.0.0"
+serde_json = "1.0.145"
