--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 gpui = { version = "*" }
+gpui-component = "^0.5.0"
 dotenvy = "^0.15.7"
 reqwest = { version = "^0.12.25", features = ["blocking", "json"] }
 serde = { version = "^1.0.0", features = ["derive"] }
