--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "^0.12.25", features = ["blocking", "json"] }
 serde = { version = "^1.0.0", features = ["derive"] }
 thiserror = "^2.0.0"
 serde_json = "1.0.0"
+regex = "1"
